updated delete/update apis to use transaction and added to gui
