# backend/internal/modules/project/dtos/request/update-project-request.go
@@ -1,0 +1,6 @@
+package request
+
+type UpdateProjectRequest struct {
+	Name      string `json:"name"`
+	Subdomain string `json:"subdomain"`
+}
