# backend/internal/modules/user/dtos/request/update-profile-request.go
@@ -1,0 +1,6 @@
+package request
+
+type UpdateProfileRequest struct {
+	Username string `json:"username"`
+	Email    string `json:"email"`
+}
